refactor: added lombok the dependencies and refactor system of the class to use it